# irc-bot

./: .gitignore  BUILD.bazel  Design.md  README.md  WORKSPACE  deps.bzl  gen_certs.sh  go.mod  go.sum  run_client.sh  run_server.sh  server.cnf
client/: BUILD.bazel  client_test.go  main.go
proto/config/: BUILD.bazel  config.pb.go  config.proto
proto/service/: BUILD.bazel  service.pb.go  service.proto  service_grpc.pb.go
server/: BUILD.bazel  config_test.go  grpc_server.go  grpc_server_test.go  irc_client.go  irc_client_test.go  main.go
server/history/: BUILD.bazel  buffer.go  buffer_test.go
