load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/morrowc/irc-bot/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/config",
        "//proto/service",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    embed = [":client_lib"],
    deps = [
        "//proto/service",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
