load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "history",
    srcs = ["buffer.go"],
    importpath = "github.com/morrowc/irc-bot/server/history",
    visibility = ["//visibility:public"],
    deps = ["//proto/service"],
)

go_test(
    name = "history_test",
    srcs = ["buffer_test.go"],
    embed = [":history"],
    deps = [
        "//proto/service",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
